<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    	<modelVersion>4.0.0</modelVersion>

	<properties>
                <java.version>1.8</java.version>
	        <my.lib>${org.glowroot:glowroot-agent:jar}</my.lib>
	        <junit.platform.version>1.2.0</junit.platform.version>
	</properties>
    	<groupId>com.github.eostermueller.tjp2</groupId>
    	<artifactId>tjp2</artifactId>
    	<version>0.0.2</version>

	<parent>
        	<groupId>org.springframework.boot</groupId>
        	<artifactId>spring-boot-starter-parent</artifactId>
        	<!--   <version>2.0.5.RELEASE</version>  -->
		<version>2.3.7.RELEASE</version>
	</parent>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
<!--
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.8.5</version>
        </dependency>
  -->

		 <dependency>
		     <groupId>org.springframework.boot</groupId>
		     <artifactId>spring-boot-starter-test</artifactId>
		     <scope>test</scope>
		 </dependency>
		<dependency>
		    <groupId>com.jayway.jsonpath</groupId>
		    <artifactId>json-path</artifactId>
		    <version>2.4.0</version>
		    <scope>test</scope>
		</dependency>
		<dependency>
		    <groupId>com.jayway.jsonpath</groupId>
		    <artifactId>json-path-assert</artifactId>
		    <version>2.4.0</version>
		    <scope>test</scope>
		</dependency>

		 <dependency>
		     <groupId>org.junit.jupiter</groupId>
		     <artifactId>junit-jupiter-api</artifactId>
		     <scope>test</scope>
		 </dependency>
		 <dependency>
		     <groupId>org.junit.jupiter</groupId>
		     <artifactId>junit-jupiter-engine</artifactId>
		     <scope>test</scope>
		 </dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
		</dependency>

		<!-- hot swapping, disable cache for template, enable live reload -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<optional>true</optional>
		</dependency>

		<!-- Optional, for bootstrap -->
		<dependency>
			<groupId>org.webjars</groupId>
			<artifactId>bootstrap</artifactId>
			<version>3.3.7</version>
		</dependency>
		
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-pool2</artifactId>
			<version>2.4.1</version>
		</dependency>
  <dependency>
                <groupId>net.sf.ehcache</groupId>
                <artifactId>ehcache</artifactId>
                <version>2.9.0</version>
        </dependency>
	<!-- http://mvnrepository.com/artifact/org.eclipse.emf/org.eclipse.emf.ecore.xmi -->
	<dependency>
	    <groupId>org.eclipse.emf</groupId>
	    <artifactId>org.eclipse.emf.ecore.xmi</artifactId>
	    <version>2.11.1-v20150805-0538</version>
	</dependency>
		
		
    <dependency>
      <groupId>com.zaxxer</groupId>
      <artifactId>HikariCP</artifactId>
      <version>3.2.0</version>
    </dependency>
    <!-- http://mvnrepository.com/artifact/com.h2database/h2 -->
    <!-- http://mvnrepository.com/artifact/com.github.tomakehurst/wiremock-standalone -->
    <dependency>
      <groupId>com.github.tomakehurst</groupId>
      <artifactId>wiremock-standalone</artifactId>
      <version>2.0.2-beta</version>
    </dependency>
    <dependency>
	          <groupId>com.h2database</groupId>
	        <artifactId>h2</artifactId>
	      <version>2.1.210</version>
    </dependency>

		<dependency>
			  <groupId>com.github.eostermueller</groupId>
			  <artifactId>workload</artifactId>
			  <version>0.0.2-SNAPSHOT</version>
		</dependency>
		
	
		
	</dependencies>

	<build>
		<!-- <defaultGoal>generate-sources</defaultGoal> -->
		<plugins>


<plugin>
    <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-dependency-plugin</artifactId>
    <version>2.2</version>
    <executions>
      <execution>
        <id>unpack-sigar</id>
        <phase>package<!-- or any other valid maven phase --></phase>
        <goals>
          <goal>unpack-dependencies</goal>
        </goals>
        <configuration>
          <includeGroupIds>org.hyperic</includeGroupIds>
          <includeArtifactIds>sigar-dist</includeArtifactIds>
          <outputDirectory>
             ${project.build.directory}/wherever/you/want/it
             <!-- or: ${project.basedir}/wherever/you/want/it -->
          </outputDirectory>
        </configuration>
      </execution>
    </executions>
</plugin>
<plugin>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-maven-plugin</artifactId>
    <executions>
        <execution>
            <goals>
                <goal>repackage</goal>
            </goals>
 	    <phase>package</phase>
            <configuration>
                <classifier>spring-boot</classifier>
                <mainClass>
                  com.github.eostermueller.tjp2.rest.WorkloadController
                </mainClass>
            </configuration>
        </execution>
    </executions>
</plugin>
<plugin>
    <groupId>org.bitstrings.maven.plugins</groupId>
    <artifactId>dependencypath-maven-plugin</artifactId>
    <version>1.1.1</version>
    <executions>
        <execution>
		<!-- <phase>prepare-package</phase> -->
            <id>set-all</id>
            <goals>
                <goal>set</goal>
            </goals>
        </execution>
    </executions>
</plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                  <version>2.22.0</version>
                 <dependencies>
                     <dependency>
                         <groupId>org.junit.platform</groupId>
                         <artifactId>junit-platform-surefire-provider</artifactId>
                         <version>${junit.platform.version}</version>
                     </dependency>
                 </dependencies>
             </plugin>


         <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.6</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>exec</goal>
                        </goals>
			<phase>integration-test</phase>
                    </execution>
                </executions>
		<configuration>
		    <executable>java</executable>
		    <arguments>
			<argument>-classpath</argument>
		        <classpath /> 
			
			<!-- #### Start of XML optimizations 
			<argument>-Dcom.sun.org.apache.xml.internal.dtm.DTMManager=com.sun.org.apache.xml.internal.dtm.ref.DTMManagerDefault</argument> 
			<argument>-Djavax.xml.parsers.DocumentBuilderFactory=com.sun.org.apache.xerces.internal.jaxp.DocumentBuilderFactoryImpl</argument>
			<argument>-Djavax.xml.xpath.XPathFactory:http://java.sun.com/jaxp/xpath/dom=com.sun.org.apache.xpath.internal.jaxp.XPathFactoryImpl</argument> 
			     #### End of XML optimizations -->

			<!-- size the old/new gen  -->
			<argument>-Xmx1256m</argument>
			<argument>-XX:NewSize=512m</argument>
			<argument>-XX:MaxNewSize=512m</argument>

			<!-- choose/configure GC algorithm -->
			<argument>-XX:+UseConcMarkSweepGC</argument>
			<argument>-XX:ConcGCThreads=4</argument>
			<!-- -XX:+UseG1GC 		-->
			<!-- -XX:+UseParallelOldGC 	-->
			<!-- -XX:+UseSerialGC 		-->

			<!-- verbose GC logging 
			<argument>-Xloggc:gc.log</argument>
			<argument>-verbose:gc</argument>
			<argument>-XX:+PrintGCDetails</argument>
			<argument>-verbose:sizes</argument>
			-->
			<argument>-javaagent:${project.build.directory}/glowroot-0.11.0/glowroot/glowroot.jar</argument>
			<!-- <argument>-javaagent:${org.glowroot:glowroot-agent:jar}</argument> -->
			<argument>-jar</argument>
			<argument>target/tjp2-0.0.2-spring-boot.jar</argument>
		   </arguments>
		</configuration>

            </plugin>

		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-compiler-plugin</artifactId>
			<version>2.3.2</version>
			<configuration>
			  <debug>true</debug>
			  <debuglevel>lines,vars,source</debuglevel>
			</configuration>
		</plugin>


		</plugins>
	</build>

</project>
